argocd/kustomize/argo-events/example-dev-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-events
spec:
  ports:
  - port: 12000
    protocol: TCP
    targetPort: 12000
  selector:
    eventsource-name: argo-events
  type: NodePort
