argocd/kustomize/argo-events/example-dev-base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-events
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:...:certificate/...
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/tags: "Team=devops,Server=etc,Service=argo-events,Security_level=moderate,Environment=dev"
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/security-groups: sg-...
#    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
  - host: argo-events.example.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-events
            port:
              number: 12000
